added linking to single page view

--- a/productClient/src/App.css
+++ b/productClient/src/App.css
@@ -39,3 +39,13 @@
   display: inline-block;
 
 }
+
+.detail {
+  border: 1px solid black;
+  height: 200px;
+  width: 350px;
+  text-align: center;
+  margin: auto;
+  margin-top: 20px;
+  /* flex-wrap: wrap; */
+}
